force-app/main/default/objects/stud__c/stud__c.object-meta.xml
<CustomObject>
    <label>stud</label>
    <nameField>
        <label>stud Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>