force-app/main/default/objects/stud__c/fields/Stu_id__c.field-meta.xml
<CustomField>
    <fullName>Stu_id__c</fullName>
    <label>Stu id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>