force-app/main/default/objects/stud__c/fields/Stu_Percent__c.field-meta.xml
<CustomField>
    <fullName>Stu_Percent__c</fullName>
    <label>Stu Percent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>