force-app/main/default/objects/stud__c/fields/Student_Notice_Board__c.field-meta.xml
<CustomField>
    <fullName>Student_Notice_Board__c</fullName>
    <label>Student Notice Board</label>
    <length>50</length>
    <type>Text</type>
</CustomField>