force-app/main/default/objects/stud__c/fields/StuEmail__c.field-meta.xml
<CustomField>
    <fullName>StuEmail__c</fullName>
    <label>StuEmail</label>
    <type>Email</type>
</CustomField>