force-app/main/default/objects/stud__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Studs</relationshipLabel>
    <relationshipName>Studs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>