force-app/main/default/objects/stud__c/recordTypes/Exams.recordType-meta.xml
<RecordType>
    <fullName>Exams</fullName>
    <active>true</active>
    <label>Exams</label>
</RecordType>